# anime_django

./: pyproject.toml  remarks.md
anime_django/: db.sqlite3  manage.py
anime_django/anime/: admin.py  const.py  forms.py  models.py  urls.py  views.py
anime_django/anime/migrations/: 0001_initial.py  0002_alter_anime_add_date_alter_anime_release_date_and_more.py  0003_alter_anime_add_date_alter_anime_release_date_and_more.py  0004_anime_is_featured_alter_anime_release_type_and_more.py  0005_anime_image_for_featured.py  0006_rename_image_for_featured_anime_image_featured.py  0007_anime_rating.py  0008_remove_anime_rating.py  0009_anime_vote_alter_vote_anime.py  0010_remove_anime_vote_anime_vote.py  0011_alter_anime_vote.py
anime_django/anime/templatetags/: filters.py
anime_django/anime_django/: asgi.py  settings.py  urls.py  wsgi.py
anime_django/static/css/: style.css
anime_django/templates/anime/: detail.html  index.html  login.html  singup.html
anime_django/templates/base/: base.html  footer.html  header.html
