[tool.poetry]
name = "anime-django"
version = "0.1.0"
description = ""
authors = ["HomeSani <dfghjjhgfd311@gmail.com>"]
readme = "README.md"
packages = [{include = "anime_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
